FPointHelper update / Construct update